--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -14,6 +14,7 @@ subdir-y += exynos
 subdir-y += freescale
 subdir-y += hisilicon
 subdir-y += intel
+subdir-y += kontron
 subdir-y += lg
 subdir-y += marvell
 subdir-y += mediatek
