--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-c0.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-c0.dtsi
@@ -1122,3 +1122,11 @@
 &jpegenc {
 	status = "okay";
 };
+
+&lsio_gpio4 {
+	pad-wakeup-num = <1>;
+	pad-wakeup = <
+		/* IMX8QXP_PCIE_CTRL0_WAKE_B, SC_PAD_WAKEUP_FALL_EDGE, LINE 2 */
+		2 5 2
+	>;
+};
