--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -819,3 +819,4 @@ CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_SOURCE_ETM4X=y
 CONFIG_DRM_TI_SN65DSI84=y
+CONFIG_DRM_TI_SN65DSI86=y
