kontron_samx8x_defconfig: enabled gpio charger

--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -820,3 +820,4 @@ CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
 CONFIG_CORESIGHT_SOURCE_ETM4X=y
 CONFIG_DRM_TI_SN65DSI84=y
 CONFIG_DRM_TI_SN65DSI86=y
+CONFIG_CHARGER_GPIO=y
