kontron_samx8x_defconfig: enabled wm8904 codec
Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -821,3 +821,5 @@ CONFIG_CORESIGHT_SOURCE_ETM4X=y
 CONFIG_DRM_TI_SN65DSI84=y
 CONFIG_DRM_TI_SN65DSI86=y
 CONFIG_CHARGER_GPIO=y
+CONFIG_SND_SOC_IMX_WM8904=y
+CONFIG_SND_SOC_WM8904=y
