kontron dts: rename kontron-samx8x-d0.dtsi to kontron-samx8x.dtsi and made qxp include dx
Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-dx.dts
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-dx.dts
@@ -1,7 +1,7 @@
 /dts-v1/;
 
 #include "../freescale/imx8qxp.dtsi"
-#include "kontron-samx8x-d0.dtsi"
+#include "kontron-samx8x.dtsi"
 #include "smarc-evaluation-carrier-v2.dtsi"
 #include "ov5640.dtsi"
 
