--- a/arch/arm64/boot/dts/freescale/imx8qxp.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8qxp.dtsi
@@ -89,6 +89,7 @@
 			#cooling-cells = <2>;
 		};
 
+#ifdef KEEP_CPUS
 		A35_2: cpu@2 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a35";
@@ -110,6 +111,7 @@
 			operating-points-v2 = <&a35_opp_table>;
 			#cooling-cells = <2>;
 		};
+#endif
 
 		A35_L2: l2-cache0 {
 			compatible = "cache";
@@ -262,9 +264,13 @@
 					trip = <&cpu_alert0>;
 					cooling-device =
 					<&A35_0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>,
+#ifdef KEEP_CPUS
 					<&A35_1 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>,
 					<&A35_2 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>,
 					<&A35_3 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
+#else
+					<&A35_1 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
+#endif
 				};
 			};
 		};
