--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -823,3 +823,4 @@ CONFIG_DRM_TI_SN65DSI86=y
 CONFIG_CHARGER_GPIO=y
 CONFIG_SND_SOC_IMX_WM8904=y
 CONFIG_SND_SOC_WM8904=y
+CONFIG_KEYBOARD_GPIO_POLLED=y
