kontron-samx8x.dtsi: commented out gpio-key,wakeup property from sleep button for now
[ 5.152183] gpio-keys-polled gpio-input: gpio-keys-polled does not support wakeup
[ 5.159759] gpio-keys-polled: probe of gpio-input failed with error -22

Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -220,7 +220,7 @@
 			gpios = <&lsio_gpio3 1 GPIO_ACTIVE_LOW>;
 			linux,code = <KEY_SLEEP>;
 			debounce-interval = <1>;
-			gpio-key,wakeup;
+//			gpio-key,wakeup;
 		};
 	};
 
