kontron dts: Add lvds_bridge/hdmi_bridge labels

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
@@ -154,7 +154,7 @@
 
 /*
 &i2c0 {
-	hdmi-bridge@39 {
+	hdmi_bridge: hdmi-bridge@39 {
 		status = "okay";
 		compatible = "sil,sii9022";
 		reg = <0x39>;
