--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -824,3 +824,4 @@ CONFIG_CHARGER_GPIO=y
 CONFIG_SND_SOC_IMX_WM8904=y
 CONFIG_SND_SOC_WM8904=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
+CONFIG_RTC_DRV_RV8803=y
