kontron_samx8x_defconfig: enabled hibernation
Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/configs/kontron_samx8x_defconfig
+++ b/arch/arm64/configs/kontron_samx8x_defconfig
@@ -825,3 +825,4 @@ CONFIG_SND_SOC_IMX_WM8904=y
 CONFIG_SND_SOC_WM8904=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
 CONFIG_RTC_DRV_RV8803=y
+CONFIG_HIBERNATION=y
