kontron dts: added GPIO10 and GPIO11 gpio names
Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-dx.dts
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-dx.dts
@@ -42,3 +42,11 @@
 		"GPIO9", "GPIO10", "GPIO11",
 		"LID", "", "", "";
 };
+
+&lsio_gpio1 {
+	/delete-property/ gpio-line-names;
+};
+
+&lsio_gpio3 {
+	/delete-property/ gpio-line-names;
+};
