--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -1173,6 +1173,19 @@
 	pad-wakeup-num = <1>;
 	/* IMX8QXP_ADC_IN5, SC_PAD_WAKEUP_FALL_EDGE, LINE 13 */
 	pad-wakeup = < 103 5 13 >;
+	gpio-line-names =
+		"", "", "", "", "", "", "", "",
+		"", "", "", "", "GPIO11", "", "", "",
+		"", "", "", "", "", "", "", "",
+		"", "", "", "", "", "", "", "";
+};
+
+&lsio_gpio3 {
+	gpio-line-names =
+		"GPIO10", "", "", "", "", "", "", "",
+		"", "", "", "", "", "", "", "",
+		"", "", "", "", "", "", "", "",
+		"", "", "", "", "", "", "", "";
 };
 
 &lsio_gpio4 {
