--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
@@ -82,7 +82,7 @@
 	clklo = <30>;
 	status = "okay";
 
-	edp-bridge@2d {
+	edp_bridge: edp-bridge@2d {
 		compatible = "ti,sn65dsi86";
 		#address-cells = <1>;
 		#size-cells = <0>;
