kontron-samx8x.dtsi: Fix interrupt pin of lvds_bridge
Both lvds_bridge and edp_bridge shared same signal LSIO_GPIO2_IO00 for
interrupts, but this signal is only valid for edp_bridge. Set
LSIO_GPIO1_IO28 as interrupt signal for lvds_bridge.

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -409,6 +409,7 @@
 				IMX8QXP_MIPI_DSI0_I2C0_SCL_MIPI_DSI0_I2C0_SCL	0xc6000020
 				IMX8QXP_MIPI_DSI0_I2C0_SDA_MIPI_DSI0_I2C0_SDA	0xc6000020
 				IMX8QXP_SPI2_SDO_LSIO_GPIO1_IO01		0x00000041
+				IMX8QXP_MIPI_DSI0_GPIO0_01_LSIO_GPIO1_IO28	0x00000061
 			>;
 		};
 
@@ -1070,7 +1071,7 @@
 		/* TODO: enable this when panel bind is solved */
 		enable-gpios = <&lsio_gpio1 01 GPIO_ACTIVE_HIGH>;
 
-		interrupts-extended = <&lsio_gpio2 0 IRQ_TYPE_EDGE_FALLING>;
+		interrupts-extended = <&lsio_gpio1 28 IRQ_TYPE_EDGE_FALLING>;
 
 		vccio-supply = <&reg_1v8_s0>;
 		vcca-supply = <&reg_1v2_s0>;
