--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -612,7 +612,7 @@
 
 		pinctrl_usbotg1: usbotg1 {
 			fsl,pins = <
-				IMX8QXP_USB_SS3_TC0_CONN_USB_OTG1_PWR	0x06000021
+				IMX8QXP_USB_SS3_TC0_CONN_USB_OTG1_PWR	0x00000021
 			>;
 		};
 
@@ -821,7 +821,7 @@
 	srp-disable;
 	hnp-disable;
 	adp-disable;
-	power-polarity-active-high;
+	power-active-high;
 	disable-over-current;
 	status = "okay";
 };
