kontron-samx8x.dtsi: Use defined constants for pin names

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -1163,7 +1163,7 @@
 &lsio_gpio1 {
 	pad-wakeup-num = <1>;
 	/* IMX8QXP_ADC_IN5, SC_PAD_WAKEUP_FALL_EDGE, LINE 13 */
-	pad-wakeup = < 103 5 13 >;
+	pad-wakeup = < IMX8QXP_ADC_IN5 5 13 >;
 	gpio-line-names =
 		"", "", "", "", "", "", "", "",
 		"", "", "", "", "GPIO11", "", "", "",
@@ -1182,5 +1182,5 @@
 &lsio_gpio4 {
 	pad-wakeup-num = <1>;
 	/* IMX8QXP_PCIE_CTRL0_WAKE_B, SC_PAD_WAKEUP_FALL_EDGE, LINE 2 */
-	pad-wakeup = < 2 5 2 >;
+	pad-wakeup = < IMX8QXP_PCIE_CTRL0_WAKE_B 5 2 >;
 };
