kontron dts: reduce DP lanes to 2.
Reducing amount of DP lanes to 2 on qxp modules due to
unstable work (no image sometimes) has been discovered on 4 lanes
for unknown reason. It needs to be discovered more deep.
Posiible reasons: power impact of 4 lanes or unstable work of RBR mode.

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x-c0-qxp.dts
@@ -126,8 +126,8 @@
 				reg = <1>;
 
 				edp_bridge_out: endpoint {
-					data-lanes = <0 1 2 3>;
-					lane-polarities = <0 0 0 0>;
+					data-lanes = <0 1>;
+					lane-polarities = <0 0>;
 					remote-endpoint = <&edp_panel_in>;
 				};
 			};
