kontron-samx8x.dtsi: disabled adc1 and emvsim0 clock nodes
They were added for QM and produce following messages on QX boot:
Disable clock-controller@5a4d0000, resource id 62 not owned
Disable clock-controller@5ac90000, resource id 102 not owned

Signed-off-by: Mikhail Vanyulin <mvanyulin@dev.rtsoft.ru>

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -1184,3 +1184,11 @@
 	/* IMX8QXP_PCIE_CTRL0_WAKE_B, SC_PAD_WAKEUP_FALL_EDGE, LINE 2 */
 	pad-wakeup = < IMX8QXP_PCIE_CTRL0_WAKE_B 5 2 >;
 };
+
+&emvsim0_lpcg {
+	status = "disabled";
+};
+
+&adc1_lpcg {
+	status = "disabled";
+};
