proper lvds settings 1

--- a/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
+++ b/arch/arm64/boot/dts/kontron/kontron-samx8x.dtsi
@@ -1097,23 +1097,23 @@
 		vpll-supply = <&reg_1v8_s0>;
 		vcc-supply = <&reg_1v2_s0>;
 
-		sn-dsi-clk-divider = <6>;
+		sn-dsi-clk-divider = <3>;
 		sn-dsi-lane-count = <4>;
 //		lvds-de-neg-polarity;
 //		lvds-channel-count = <2>;
 		lvds-channel-count = <1>;
-//		lvds-set-24bpp-mode;
+		lvds-set-24bpp-mode = <1>;
 //		lvds-set-24bpp-format1;
-//		lvds-cha-vocm;
+		lvds-cha-vocm = <0>;
 //		lvds-chb-vocm;
-//		lvds-cha-vod-swing = <3>;
+		lvds-cha-vod-swing = <2>;
 //		lvds-chb-vod-swing = <3>;
 //		lvds-even-odd-swap;
-//		lvds-cha-reverse;
+		lvds-cha-reverse = <0>;
 //		lvds-chb-reverse;
-//		lvds-cha-term;
+		lvds-cha-term = <0>;
 //		lvds-chb-term;
-//		lvds-cha-cm-adjust = <0>;
+		lvds-cha-cm-adjust = <0>;
 //		lvds-chb-cm-adjust = <0>;
 //		sn-sync-delay = <39>;
 		dsi-burst-mode;
